fix: images overflowing off view (resolves #88)

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -107,6 +107,10 @@ footer {
     }
 }
 
+.content {
+    img { max-width: 100%; }
+}
+
 .header { font-size: 2.5rem; }
 
 #timeline {
